[#8200] Remove JDK9 from optional-jdk9